fix align

--- a/index.css
+++ b/index.css
@@ -34,14 +34,14 @@ body {
   min-height: 300px;
   padding: 24px;
   position: relative;
-  width: 90%;
+  width: 80%;
   margin-bottom: 180px;
 }
 .letter:before, .letter:after {
   content: "";
   height: 98%;
   position: absolute;
-  width: 100%;
+  width: 80%;
   z-index: -1;
 }
 .letter:before {
